[package]
name = "ruki"
version = "0.1.0"
authors = ["Kazuki Sawada <kazuki@6715.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tera = "1.3.0"
